refactor for redirect

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "build": "npx tailwindcss -i ./tailwind-in.css -o ./public/tailwind-out.css",
-    "watch": "npx tailwindcss -i ./tailwind-in.css -o ./public/tailwind-out.css --watch"
+    "build": "npx tailwindcss -i ./tailwind-in.css -o ./public/testimonials/tailwind-out.css",
+    "watch": "npx tailwindcss -i ./tailwind-in.css -o ./public/testimonials/tailwind-out.css --watch"
   },
   "devDependencies": {
     "tailwindcss": "^3.3.2"
